# dooms

./: .gitignore  4AI.md  Makefile  README.md  pyproject.toml  pytest.ini
src/dooms/: __init__.py  analysis.py  fdr.py  get_data_in_project_example.py  io.py  masks.py
src/dooms/cli/: main.py
