[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dooms"
version = "0.1.0"
description = "ANOVA and Tukey post-hoc analysis for long-format proteomics data."
readme = "README.md"
authors = [
    {name = "Matteo Lacki", email = "matteo.lacki@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numba",
    "numpy",
    "pandas",
    "scipy",
]

[project.scripts]
dooms = "dooms.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
